fixed overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,10 +23,10 @@ button {
 }
 
 /* For Webkit browsers */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
 }
 
 html, body {
   overflow-x: hidden;
-}
+} */
